@@ -1,3 +1,9 @@
+2010-05-07  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
+	  Fixed 'Bug 602061 - Completion list tooltips should hide
+	  when selected item scrolled out of view'.
+
 2010-05-06  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Ide.Gui/Document.cs:
